--- a/styles.css
+++ b/styles.css
@@ -7,26 +7,25 @@ body{
     flex-direction: row;
     align-items:center
 }
-.mainContainer{
+.mainContainer{ 
     width: 100%;
-    height: 100%;
-    margin: 0;
+    height: 600px;
     background:black;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: space-between;
     flex-direction: column;
-    
 }
 
 .canvaContainer{
-    margin-top: 18px;
-    margin-bottom: 18px;
+    width: 352px;
+    height: 198px;
+    border: aquamarine 2px solid;
+    scale:3;
+    transform: translateY(40%);
 }
 
 #canvas{
-    border: aquamarine 2px solid;
-    border-radius: 8px;
     image-rendering: pixelated;
 }
 
@@ -38,6 +37,7 @@ body{
     *{
         margin: 0px 4px 0px 4px;
     }
+    
 }
 
 .playerInfo{
